--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,57 +1,19 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
     <EditText
-        android:id="@+id/editTextNumber"
+        android:id="@+id/etSearch"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:hint="Nhập số nguyên dương"
-        android:inputType="number"
-        android:padding="12dp"
-        android:minHeight="48dp" />
-
-
-    <RadioGroup
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:hint="Tìm kiếm theo tên hoặc MSSV"
+        android:inputType="text" />
 
-        <RadioButton
-            android:id="@+id/radioEven"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Số chẵn" />
-
-        <RadioButton
-            android:id="@+id/radioOdd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Số lẻ" />
-
-        <RadioButton
-            android:id="@+id/radioSquare"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Số chính phương" />
-    </RadioGroup>
-
-    <Button
-        android:id="@+id/buttonShow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Show" />
-
-    <TextView
-        android:id="@+id/textViewError"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#FF0000" />
-
-    <ListView
-        android:id="@+id/listView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 </LinearLayout>
